--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                                     <li><a href="https://www.linkedin.com/in/ajayyadav18" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
                                     <!-- <li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
                                 <li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li> -->
-                                    <li><a href="https://github.com/SaurabhGupta094" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+                                    <li><a href="https://github.com/AjayYadav1804" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
                                 </ul>
                             </div>
                         </div>
