--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
                 <!-- <h2 class="major">Intro</h2> -->
                 <span class="image main"><img src="images/pic01.jpg" alt="" /></span>
-                Experienced Senior Quality Test Engineer with a demonstrated 7 Years of experience in the information technology and services industry.
+                Experienced Senior Quality Test Engineer with over 7 Years of experience in the information technology and services industry.
                 <br>
 				<p>In Past 7 Years I had developed high end Problem Solving and Analytical Skills which are very much required as an Automation Test Engineer/SDET. As an Software Quality Assurance Analyst I have huge affinity towards the best quality delivery of the Software I Test.</p>
                 <br>
